# lazyme

./: .gitignore  Cargo.toml  README.md  README.zh.md  build.rs
.github/workflows/: release.yml
frontend/: package-lock.json
frontend/src/: App.tsx  api.ts  i18n.tsx  index.css  main.tsx  performance.ts
src/: api.rs  config.rs  git.rs  main.rs  process.rs  project.rs  queue.rs  registry.rs  self_update.rs  state.rs
